finished correcting background

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -1,8 +1,27 @@
-
-
-% How token-based authentication works https://github.com/Posya/wiki/blob/master/best-practice-for-rest-token-based-authentication-with-jax-rs-and-jersey.adoc
 % JAX-RS Programmatic Security https://dennis-xlc.gitbooks.io/restful-java-with-jax-rs-2-0-2rd-edition/content/en/part1/chapter15/programmatic_security.html
-% ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
+
+@misc{repo_01,
+  author = {Jesus Antonio Soto},
+  title = {ESH Fork with JWT Authentication},
+  month = {April},
+  year = {2018},
+  howpublished = {\url{https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt}}
+}
+
+@misc{repo_02,
+ author = {Jesus Antonio Soto},
+ title = {Implementation of Authenticators for OSGi 6},
+ month = {April},
+ year = {2018},
+ howpublished = {\url{https://github.com/antoniosv/iot-sec-thesis/tree/master/org.dreamland.whitefilter}}
+}
+
+@misc{token_auth,
+title = {How token-based authentication works},
+author = {Cassio Mazzochi Molin},
+note = {Date accessed: 2018-04-01},
+howpublished = {\url{https://stackoverflow.com/a/26778123}}
+}
 
 @article{misuse,
 author = {Sindre, Guttorm and Opdahl, Andreas},
