added more meat to conclusion and fixed some bibliography

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -38,7 +38,7 @@ title = {Capturing security requirements through misuse cases}
 }
 
 @misc{eu_law,
-  title = {2018 reform of EU data protection rules},
+  title = {{2018 reform of EU data protection rules}},
   author = {European Comission},
   note = {Date accessed: 2018-05-15},
   howpublished={\url{https://ec.europa.eu/commission/priorities/justice-and-fundamental-rights/data-protection/2018-reform-eu-data-protection-rules_en}}
@@ -46,7 +46,7 @@ title = {Capturing security requirements through misuse cases}
 }
 
 @misc{owasp,
-title = {OWASP Internet of Things Project},
+title = {{OWASP Internet of Things Project}},
 author = {OWASP community},
 note = {Date accessed: 2018-02-15},
 howpublished = {\url{https://www.owasp.org/index.php/OWASP_Internet_of_Things_Project}}
@@ -54,7 +54,7 @@ howpublished = {\url{https://www.owasp.org/index.php/OWASP_Internet_of_Things_Pr
 
 @techreport{RFC7617,
 author = {J. Reschke},
-title = {The 'Basic' HTTP Authentication Scheme},
+title = {{The 'Basic' HTTP Authentication Scheme}},
 howpublished = {Internet Requests for Comments},
 type = {RFC},
 number = {7617},
@@ -66,7 +66,7 @@ institution = {RFC Editor},
 }
 		    
 @misc{basic_01,
-title = {Is BASIC-Auth secure if done over HTTPS?},
+title = {{Is BASIC-Auth secure if done over HTTPS?}},
 author = {Avi Douglen},
 note = {Date accessed: 2018-05-15},
 howpublished = {\url{https://security.stackexchange.com/questions/988/is-basic-auth-secure-if-done-over-https}}
@@ -80,7 +80,7 @@ note = {Date accessed: 2018-05-05}
 }
 
 @misc{nimbus,
-  title = {Nimbus JOSE + JWT},
+  title = {{Nimbus JOSE + JWT}},
   author = {Connect2id},
   note = {Date of access: 2018-04-01},
   howpublished = {\url{https://connect2id.com/products/nimbus-jose-jwt}}
@@ -91,7 +91,7 @@ author = {Tae Kim, Jung},
 year = {2015},
 month = {10},
 pages = {201-208},
-title = {Requirement of Security for IoT Application based on Gateway System},
+title = {{Requirement of Security for IoT Application based on Gateway System}},
 volume = {9},
 booktitle = {International Journal of Security and Its Applications}
 }
@@ -112,7 +112,7 @@ keywords = "IoT, Security, Privacy"
 
 @inproceedings{Zhang:2015,
  author = {Zhang, Zhi-Kai and Cho, Michael Cheng Yi and Shieh, Shiuhpyng},
- title = {Emerging Security Threats and Countermeasures in IoT},
+ title = {{Emerging Security Threats and Countermeasures in IoT}},
  booktitle = {Proceedings of the 10th ACM Symposium on Information, Computer and Communications Security},
  series = {ASIA CCS '15},
  year = {2015},
@@ -144,7 +144,7 @@ keywords = "Internet of Things (IoT), Security, Energy efficiency"
 
 @article {DAC3323,
 author = {Dhillon, Parwinder Kaur and Kalra, Sheetal},
-title = {Secure multi-factor remote user authentication scheme for Internet of Things environments},
+title = {{Secure multi-factor remote user authentication scheme for Internet of Things environments}},
 journal = {International Journal of Communication Systems},
 volume = {30},
 number = {16},
@@ -167,7 +167,7 @@ note = {e3323 IJCS-16-0515.R1},
 
 @misc{openhab_02,
   author = {The openHAB Community and the openHAB Foundation e.V.},
-  title = {About openHAB},
+  title = {{About openHAB}},
   note = {Access date: 2018-05-13},
   howpublished = {\url{https://docs.openhab.org/introduction.html}}
 }
