--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -1009,19 +1009,34 @@ Essentially, the implementation of the basic and JWT authenticators was successf
 \section{Conclusion and Future Research Directions}
 \label{sec:conclusion}
 \TODO{ADD MORE PARAGRAPHS FOR FUTURE RESEARCH DIRECTIONS}
-\TODO{Encrypt the JWT}
-\TODO{LDAP for user management}
-\TODO{Generate RSA key}
-\TODO{first user setup to allow access}
-\TODO{jwt revokation}
 \TODO{SUMMARY}
-This work gave an overview of the security challenges present in applications for Internet of Things, particularly in the domain of smart homes. It analyzed the security mechanisms employed in openHAB and Eclipse SmartHome, especially in terms of access control and privacy. Upon observing the lack of authentication and authorization mechanisms, a JSON Web Token-based authenticator was implemented according to the principles of the OSGi framework. An additional basic authenticator was also implemented as fallback in case the client does not make use of JSON Web Tokens. Finally, a fine-grained, yet usable authorization model was proposed for openHAB. This authorization model distinguishes between users who may have overlapping permissions, but should not have equal control among all resources of the smart home environment.
+This work gave an overview of the security challenges present in applications for Internet of Things, particularly in the domain of smart homes. It analyzed the security mechanisms employed in openHAB and Eclipse SmartHome, especially in terms of access control and privacy. Upon observing the lack of authentication and authorization mechanisms, a JSON Web Token-based authenticator was implemented according to the principles of the OSGi framework. An additional basic authenticator was also implemented as a fallback mechanism in case the client cannot store a JSON Web Token as a cookie. Finally, a fine-grained, yet usable authorization model was proposed for Eclipse SmartHome and openHAB. This authorization model distinguishes between users who may have overlapping permissions, but should not have equal control among all resources of the smart home ecosystem.
 
-At the first step of implementation, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource could be allowed or forbidden. Based on it, implementation of a JSON Web Token was implemented inside the logic of the aforementioned method.In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which requested credentials to the client's web browser as a prompt. The evaluation was performed in two stages. The first stage was made outside the ESH runtime, in an isolated OSGi environment. Both the basic and JWT authenticators were effectively able to authenticate incoming HTTP requests to the servlet. First time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed. The second stage of the evaluation made use of the the same implementation but deployed under the ESH OSGi runtime. Due to class-loading problems, the JWT authenticator was not able to be tested. However, the basic authenticator, which did not depend on external libraries, effectively restricted access to the servlet resource if the credentials were not provided in the header of the HTTP request.
+\subsection{Contributions}
 
-\TODO{Database LDAP for managing users and permissions}
-\TODO{authentication using third party services: oauth}
-There are several endeavors in terms of implementation that may be considered for future work. First of all, implementation of a form-based authentication front-end that makes use of the JWT authenticator. Due to the architecture of the Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication. Second of all, it would be desirable to have an expiration date for the generated JSON Web Tokens, and thus an implementation of the renewal, or rather, re-generation process in these instances. Thirdly, it remains to solve how to make use of the authenticator for the REST API. At the time of writing, the \emph{merge} of \texttt{HttpContext} has not been made in the development branch of Eclipse SmartHome, and thus experimentation is not yet possible. Thirdly, a concrete definition and implementation of the mechanisms based on the proposed authorization model. Finally, a fresh re-evaluation of the access control mechanisms could be carried out.
+As one of the main contributions, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered resource servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource was either allowed or forbidden. Based on this behavior, the authentication logic via a JSON Web Token was implemented within the aforementioned method. In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which demanded credentials from the client's web browser as a prompt. The evaluation was performed in two stages. The first stage was made outside the ESH runtime, in an isolated OSGi environment, under Karaf as container. Both the basic and JWT authenticators were effectively able to authenticate incoming HTTP requests to the servlet. First time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed. The second stage of the evaluation made use of the the same authentication logic, but deployed under the ESH OSGi runtime. Due to class-loading problems, the JWT authenticator was not able to be tested. However, the basic authenticator, which did not depend on external libraries, effectively restricted access to the servlet resource if the credentials were not provided in the header of the HTTP request.
+
+The second contribution for Eclipse SmartHome and openHAB was the proposal of a fine-grained, yet usable authorization model. This model was inspired by the RBAC and CapAC models, and adjusted accordingly to fit within the smart home paradigm. Most importantly, the concept of \emph{capability sets} is used to encompass resources and functionalities of the smart home ecosystem. Users get assigned capability sets to reflect an access control policy that maps the authority of a user to specific capabilities of the smart home ecosystem. A capability set could be defined as part of the definition of a binding, for example.
+
+\subsection{Future Research Directions}
+
+There are several endeavors in terms of implementation that may be considered for future work. The most apparent one is related to the class-loading problems in Eclipse SmartHome that impede the use of a third-party library for JWT generation and verification. Otherwise, it could also be considered to implement a JWT generator and verifier using the tools provided by the native Java API.
+
+Furthermore, for the sake of usability, it could be considered to implement a form-based authentication mechanism compatible with the implemented authenticators. After all, due to the architecture of Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication.
+
+In terms of JWT management and forward-security, it would be desirable to have an expiration date for the generated JSON Web Tokens. For this, a renewal procedure should be implemented. If the token has already expired, then credentials would be requested once again through an encrypted transport (e.g.., HTTPS). Additionally, it could also be considered to encrypt the JWT according to the specification, for the sake of adding another layer of confidentiality protection.
+
+Furthermore, it could be considered how an RSA key can be obtained before the authenticators are called for JWT generation and verification. An option could be to generate the key pair during deployment of ESH or openHAB. 
+
+Regarding the overall architecture of ESH, it is still not clear how to make use of the authenticator for the REST API. At the time of writing, the \emph{bridge} of \texttt{HttpContext} between the two kinds of servlets (traditional and REST) has not been made in the development branch of Eclipse SmartHome, and thus experimentation is not yet possible.
+
+As the authenticators were implemented as black boxes, a proper user management database or filesystem is not yet in place. It is of interest how existing solutions for storage of user profiles e.g., LDAP, relational databases, could be adapted into the OSGi architecture for ESH.
+
+A long existing problem for the ESH community regarding turning \emph{off} access control should also be considered in solutions intended for production. Creating a backdoor in to bypass security is never a good idea, after all. Instead, it could be considered that access control is enabled for the first time after a user has been created. Thus, there would be always at least one user that satifies the security policy. 
+
+A concrete definition and implementation of the mechanisms based on the proposed authorization model. Finally, a fresh re-evaluation of the access control mechanisms could be carried out.
+
+Finally, this work looked at the scenario of authentication \emph{within} the ecosystem, but as Internet of Things, there are other authentication scenarios. By employing OAuth, for example, a user may choose to through e.g., Google, Facebook, Twitter, etc, expanding the use cases and options for users.
 
 \newpage
 
